--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,21 @@
 
+
+/* Position text in the middle */
+.middle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+/* Style the <hr> element */
+hr {
+  margin: auto;
+  width: 40%;
+}
+
+
 /* updated submit button */
 /*
 .btn-primary {
