--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,22 @@
 
+
+/* Position text in the middle */
+.middle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+/* Style the <hr> element */
+hr {
+  margin: auto;
+  width: 40%;
+}
+
+
+
 @font-face {
   font-family: Roboto;
   src: url(../fonts/Roboto/Roboto-Regular.ttf);
